Revision history for App-DBBrowser


2.410  2024-05-04
        - Derived table/Cte: bugfix in 'choose_query'.
        - Refactoring and cleanup.
        - Term::Choose minimum version 1.765.

2.409  2024-04-28
        - SQLite plugin: new option to set the busy timeout.
        - SQLite: Renamed and modified the user defined scalar function 'truncate'.
                  Now 'trunc' treats any value that looks like a number as a number.
        - Bugfix in the limit/offset submenu.
        - New input filter 'convert datetime'.
        - Quote entered numbers if the data type is not numeric and no placeholders are used.
        - Added scalar convert functions.
        - Epoch_to_DateTime: bugfix and updates.
        - Data import: if chosen a deleted directory warn and remove the directory from history.

2.408_05  2024-04-21
        - sqlite_busy_timeout.
        - Bugfix limit, offset.

2.408_04  2024-04-15
        - New input filter: convert_datetime.

2.408_03  2024-04-05
        - Quote numbers if the data type is not numeric.
        - Refactoring.

2.408_02  2024-04-01
        - New: to_xxx scalar functions.
        - Refactored ScalarFunctions.
        - If chosen a deleted directory: warn and remove it from history.

2.408_01  2024-03-21
        - Epoch_to_DateTime: bugfix and updates.
        - New: Unix_Timestamp.

2.407  2024-03-11
        - Bugfix: auto-increment primary key quoted twice.

2.406  2024-03-11
        - New 'create table' options: 'table constraints' and 'table options'.
        - Update option 'auto increment column'.
        - Use storable to make deep copies.
        - DB2, Oracle, Firebird: regex operator bugfix.
        - DBD::SQLite minimum version '1.74'.

2.405  2024-02-12
        - Bugfixes in the 'search & replace' input filter.

2.404  2024-02-01
        - Update and bugfixes documentation.

2.403  2024-01-25
        - Update documentation.
        - Term::Choose minimum version '1.763'.

2.402  2024-01-03